@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#009b3e</color>
-    <color name="colorPrimaryDark">#009b3e</color>
+    <color name="colorPrimaryDark">#008b3e</color>
     <color name="colorAccent">#00b23e</color>
+    <color name="colorMaterialDark">#212121</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
